# web-app-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  pnpm-lock.yaml
crates/web-app-demo-backend/: Cargo.toml
crates/web-app-demo-backend/src/: infrastructure.rs  main.rs  services.rs
crates/web-app-demo-backend/src/chat/: mod.rs  models.rs  tests.rs
crates/web-app-demo-backend/src/util/: mod.rs  wrappedbacktrace.rs
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx  routes.ts
frontend/src/components/: AlertNotification.tsx  ChatList.tsx  ChatManager.tsx  ChatMessageCard.tsx  ChatMessagesView.tsx  ChatWindow.tsx  CreateNewChatForm.tsx  CreateNewIdentityForm.tsx  ErrorView.tsx  IdentitiesList.tsx  IdentitiesManager.tsx  SendChatMessageForm.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts
frontend/src/models/: Chat.ts  Identity.ts
frontend/src/util/: chatClient.ts  util.ts
