[package]
name = "web-app-demo-backend"
version = "0.1.0"
edition = "2024"
authors = ["Eric Wolf"]

[dependencies]
actix-web = "4.10.2"
anyhow = { version = "1.0.97", features = ["backtrace"] }
chrono = { version = "0.4.40", features = ["serde"] }
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.16"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
futures = "0.3.31"
